Bug 431652 - Wayland: multi-monitor zoom effect regression with new per-output composite-scheduling
Summary: Wayland: multi-monitor zoom effect regression with new per-output composite-s...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: multi-screen (other bugs)
Version First Reported In: git master
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression, wayland-only
Depends on:
Blocks:
 
Reported: 2021-01-15 19:06 UTC by Duncan
Modified: 2021-01-21 07:52 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Duncan 2021-01-15 19:06:42 UTC
I'm running git-master kde-frameworks and plasma live-git via the gentoo/kde overlay live-git packages.  Rebuilt today with kwin HEAD currently at 870a9e4d0.

My monitor setup is two 4K 75-inch TVs as monitors arranged horizontally.  Here's my usual monitor/window layout (ASCII-art, best viewed with monospace font):

| "second" monitor  | "primary" monitor |
+-------------------+--------+--------+-+
|                   |  work  |  work  |p|
|    full-screen    |  win2  |  win3  |a|
|       video       +--------+--------+n|
|      window       |  work  |  work  |e|
|                   |  win1  |  win4  |l|
+-------------------+--------+--------+-+

As might be imagined two 75-inch TVs wide is a lot of horizontal space so my focus tends to be toward the (bottom) center.

Sometimes I zoom in and therein is the problem.  I'll normally be zooming work-windows #1 or #2, left side of the right-hand screen/monitor.  Often the zoom places the window on both monitors even tho at normal size it's to the left on the right-hand monitor.

The problem is that with the new per-monitor composite-scheduling, if I'm typing and not moving the mouse, the part of the work-window zoomed to the left monitor doesn't get redrawn to reflect the new content, only the part of the window on the "home" monitor gets redrawn.  As soon as I move the mouse the part of the window on the left monitor "catches up", but having to constantly break-flow to switch to the mouse and trigger the repaint is a real work-flow killer!

(While typing this up I did notice that hitting the zoom hotkey triggers a repaint as well.  I've a keyboard with "extra" keys, three of which are dedicated zoom-in/out/actual, so that's a nearby single-touch, faster than the mouse.  Another alternative is repositioning the window so a small fraction of it is on the other monitor at normal size too.  Then it updates as it should.)

Obviously the new code doesn't account for the fact that with zoom, a window appearing on just one monitor at 100%/normal size may appear on the other one or on both when zoomed in, so the "non-home" monitor isn't getting a redraw scheduled until the mouse moves.

(Tested konsole gtk3/claws-mail both native wayland, and gtk2/pan, xwayland.  It's the compositor not the app.)
Comment 1 Nate Graham 2021-01-15 21:11:53 UTC
What an amazing setup!
Comment 2 Bug Janitor Service 2021-01-18 09:23:21 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/595
Comment 3 Duncan 2021-01-18 10:07:40 UTC
(In reply to Bug Janitor Service from comment #2)
> A possibly relevant merge request was started @
> https://invent.kde.org/plasma/kwin/-/merge_requests/595

Patched in and confirmed fix.  Thanks.
Comment 4 Vlad Zahorodnii 2021-01-21 07:51:44 UTC
Git commit 54313d324e7c5387ffe1ad28c0881d501e8a6350 by Vlad Zahorodnii.
Committed on 21/01/2021 at 07:51.
Pushed by vladz into branch 'master'.

effects/magnifier: Schedule a repaint when window is damaged

This is needed to make per-screen rendering work correctly.

M  +8    -0    effects/magnifier/magnifier.cpp
M  +1    -0    effects/magnifier/magnifier.h

https://invent.kde.org/plasma/kwin/commit/54313d324e7c5387ffe1ad28c0881d501e8a6350
Comment 5 Vlad Zahorodnii 2021-01-21 07:51:52 UTC
Git commit 35e254a8a97f6ab4d65fc8cc66190af60cf75b98 by Vlad Zahorodnii.
Committed on 21/01/2021 at 07:51.
Pushed by vladz into branch 'master'.

effects/lookingglass: Schedule a repaint when window is damaged

This is needed to make per-screen rendering work correctly.

M  +15   -2    effects/lookingglass/lookingglass.cpp
M  +3    -0    effects/lookingglass/lookingglass.h

https://invent.kde.org/plasma/kwin/commit/35e254a8a97f6ab4d65fc8cc66190af60cf75b98
Comment 6 Vlad Zahorodnii 2021-01-21 07:52:00 UTC
Git commit 523ad8e25c34eb0e683f6e29ad15c3b9a7cdad31 by Vlad Zahorodnii.
Committed on 21/01/2021 at 07:51.
Pushed by vladz into branch 'master'.

effects/zoom: Schedule a repaint when window is damaged

This is needed to make per-screen rendering work correctly.

M  +8    -0    effects/zoom/zoom.cpp
M  +1    -0    effects/zoom/zoom.h

https://invent.kde.org/plasma/kwin/commit/523ad8e25c34eb0e683f6e29ad15c3b9a7cdad31