effects/lookingglass: Schedule a repaint when window is damaged

This is needed to make per-screen rendering work correctly.

BUG: 431652