effects/lookingglass/lookingglass.h
@@ -44,6 +44,8 @@ public:
     int initialRadius() const {
         return initialradius;
     }
+    QRect magnifierArea() const;
+
 public Q_SLOTS:
     void toggle();
     void zoomIn();
@@ -51,6 +53,7 @@ public Q_SLOTS:
     void slotMouseChanged(const QPoint& pos, const QPoint& old,
                               Qt::MouseButtons buttons, Qt::MouseButtons oldbuttons,
                               Qt::KeyboardModifiers modifiers, Qt::KeyboardModifiers oldmodifiers);
+    void slotWindowDamaged();
 
 private:
     bool loadData();
